// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Title component tests level = h1 1`] = `
<Text
  style={
    [
      {
        "color": "#2b2e33",
        "fontFamily": "TT Fellows",
        "fontWeight": 700,
        "includeFontPadding": false,
        "verticalAlign": "middle",
      },
      {
        "fontSize": 24,
      },
      undefined,
    ]
  }
  testID="Title"
>
  Text
</Text>
`;

exports[`Title component tests level = h2 1`] = `
<Text
  style={
    [
      {
        "color": "#2b2e33",
        "fontFamily": "TT Fellows",
        "fontWeight": 700,
        "includeFontPadding": false,
        "verticalAlign": "middle",
      },
      {
        "fontSize": 20,
      },
      undefined,
    ]
  }
  testID="Title"
>
  Text
</Text>
`;

exports[`Title component tests level = h3 1`] = `
<Text
  style={
    [
      {
        "color": "#2b2e33",
        "fontFamily": "TT Fellows",
        "fontWeight": 700,
        "includeFontPadding": false,
        "verticalAlign": "middle",
      },
      {
        "fontSize": 18,
      },
      undefined,
    ]
  }
  testID="Title"
>
  Text
</Text>
`;

exports[`Title component tests level = h4 1`] = `
<Text
  style={
    [
      {
        "color": "#2b2e33",
        "fontFamily": "TT Fellows",
        "fontWeight": 700,
        "includeFontPadding": false,
        "verticalAlign": "middle",
      },
      {
        "fontSize": 16,
      },
      undefined,
    ]
  }
  testID="Title"
>
  Text
</Text>
`;

exports[`Title component tests level = h5 1`] = `
<Text
  style={
    [
      {
        "color": "#2b2e33",
        "fontFamily": "TT Fellows",
        "fontWeight": 700,
        "includeFontPadding": false,
        "verticalAlign": "middle",
      },
      {
        "fontSize": 14,
      },
      undefined,
    ]
  }
  testID="Title"
>
  Text
</Text>
`;

exports[`Title component tests level = h6 1`] = `
<Text
  style={
    [
      {
        "color": "#2b2e33",
        "fontFamily": "TT Fellows",
        "fontWeight": 700,
        "includeFontPadding": false,
        "verticalAlign": "middle",
      },
      {
        "fontSize": 12,
      },
      undefined,
    ]
  }
  testID="Title"
>
  Text
</Text>
`;
